--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>FlexBlog</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     
