--- a/index.html
+++ b/index.html
@@ -8,6 +8,140 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="superinfo-bg">
+        <div class="superinfo">
+        <p>Seg / Sex - 08:00 ás 18:00</p>
+        <a href="tel:+55 11 99999-9999">+55 11 99999-9999</a>
+        <p>Av. Pedro, 330, Tremembé - SP</p>
+        </div>
+    </div>
+
+    <header class="menu-bg">
+        <div class="menu">
+            <div class="menu-logo">
+                <a href="#">FlexBlog</a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#produtos">Produtos</a></li>
+                    <li><a href="#preco">Preço</a></li>
+                    <li><a href="#qualidade">Qualidade</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <h1 class="introducao">Novos valores e<br>Propriedades de CSS</h1>
+
+    <section class="sobre" id="sobre">
+        <div class="sobre-info">
+            <h1>Sobre</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis accusantium nesciunt nobis consequatur placeat minus iure, repudiandae, numquam expedita praesentium nulla eos facere excepturi quo consequuntur fdg</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et error eum aliquid veritatis sed a quia, laudantium impedit aut quod consectetur numquam vitae voluptatum cupiditate, quasi facilis incidunt maxime doloremque!</p>
+        </div>
+        <div class="sobre-img">
+            <img src="img/sobre1.jpg" alt="sobre 1">
+        </div>
+        <div class="sobre-img">
+            <img src="img/sobre2.jpg" alt="sobre 2">
+        </div>
+    </section>
+
+    <section class="produtos" id="produtos">
+        <h1>Produtos</h1>
+        <div class="produtos-container">
+            <div class="produtos-item purple">
+                <img src="img/produtos1.jpg" alt="Produto 1">
+            </div>
+            <div class="produtos-item pink">
+                <img src="img/produtos2.jpg" alt="Produto 2">
+            </div>
+            <div class="produtos-item blue">
+                <img src="img/produtos3.jpg" alt="Produto 3">
+            </div>
+        </div>
+    </section>
+
+    <section class="preco" id="preco">
+        <div class="preco-item">
+            <h2>Cobre</h2>
+            <span><sup>R$</sup>19</span>
+            <ul>
+                <li>Planos Ilimitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+            </ul>
+            <a href="#">Comprar</a>
+        </div>
+        <div class="preco-item">
+            <h2>Prata</h2>
+            <span><sup>R$</sup>79</span>
+            <ul>
+                <li>PLanos Ilimitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+                <li>Compra exclusiva</li>
+            </ul>
+            <a href="#">Comprar</a>
+        </div>
+        <div class="preco-item">
+            <h2>Ouro</h2>
+            <span><sup>R$</sup>79</span>
+            <ul>
+                <li>PLanos Ilimitados</li>
+                <li>Acesso Restrito</li>
+                <li>Conteúdo Secreto</li>
+                <li>Suporte 24h</li>
+                <li>Compra exclusiva</li>
+                <li>Dowload dos itens</li>
+            </ul>
+            <a href="#">Comprar</a>
+        </div>
+    </section>
+
+    <section class="qualidade" id="item">
+        <div class="qualidade-item">
+            <h2>Inteligente</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt. Facere maxime explicabo volupta</p>
+        </div>
+        <div class="qualidade-item">
+            <h2>Compacto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explica Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo Aliquid, quos vel temporibus et.</p>
+        </div>
+        <div class="qualidade-item">
+            <h2>Econômico</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt.</p>
+        </div>
+        <div class="qualidade-item">
+            <h2>Transparente</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt. Facere maxime explicabo volupta</p>
+        </div>
+        <div class="qualidade-item">
+            <h2>Opaco</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt. Facere maxime explicabo </p>
+        </div>
+        <div class="qualidade-item">
+            <h2>Sustentável</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt. Facere maxime explicabo volupta Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt.</p>
+        </div>
+    </section>
+
+    <section class="newelatter">
+        <div class="newslatter-info">
+            <h1>Newslatter</h1>
+            <p>Acesse e fique por dentro das novidades</p>
+        </div>
+        <form class="newslatter-form">
+            <input type="text" placeholder="Seu e-mail">
+            <button type="submit">Assinar</button>
+        </form>
+    </section>
+
+    <footer class="footer">
+        <p>FlexBlog | Criado por Gabriel dos Santos</p>
+    </footer>
 </body>
 </html>
