--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <section class="qualidade" id="item">
+    <section class="qualidade" id="qualidade">
         <div class="qualidade-item">
             <h2>Inteligente</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quos vel temporibus et, quae libero earum expedita, tenetur illo explicabo sunt. Facere maxime explicabo volupta</p>
