--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
     </section>
 
-    <section class="newelatter">
+    <section class="newslatter">
         <div class="newslatter-info">
             <h1>Newslatter</h1>
             <p>Acesse e fique por dentro das novidades</p>
